<resources>
    <string name="app_name">CYBAVO Auth Example</string>
    <string name="desc_empty_pairings">It seems that you have no pairings.</string>
    <string name="action_pair_now">Pair now!</string>
    <string name="action_pair">Pair</string>
    <string name="action_unpair">Unpair</string>
    <string name="desc_empty_action">All set!</string>

    <string name="action_scan">Scan</string>
    <string name="action_skip">Skip</string>
    <string name="action_done">Done</string>
    <string name="action_input_token">Input token</string>
    <string name="title_input_token">Input paring token</string>
    <string name="hint_input_token">Pairing token…</string>

    <string name="desc_pair_scan">Scan QR code shows on web page.</string>
    <string name="desc_pair_finish">Congratulations! This device was paired successfully!</string>

    <string name="title_confirm_unpair">Unpair</string>
    <string name="message_confirm_unpair">Do you want to unpair "%1$s"?</string>

    <string name="label_actions">Actions</string>
    <string name="label_settings">Settings</string>
    <string name="label_new_pairing">New pairing</string>
    <string name="label_finish">Finish</string>
    <string name="label_parings">Parings</string>
    <string name="label_paring_services">Paring services</string>
    <string name="label_settings_dev">Development</string>
    <string name="label_sdk_version">SDK version</string>
    <string name="label_endpoint">Service endpoint</string>
    <string name="label_api_code">API code</string>

    <string name="template_pairing_count">%1$d pairing(s)</string>
    <string name="message_change_restart">This changing will take effect the next time you restart the app</string>
    <string name="label_about">About</string>
    <string name="label_version">Version</string>

    <string name="template_paired_at">Paired at %1$s</string>

    <string name="action_setup_pin_code">Setup PIN code</string>
    <string name="desc_setup_pin_code">Setup PIN code to protect your property</string>

    <string name="action_unknown">Unknown action (%d)</string>
    <string name="desc_action_unknown">The action type (%d) is unrecognized</string>
    <string name="action_submit">Submit</string>
    <string name="action_reject">Reject</string>
    <string name="action_accept">Accept</string>
    <string name="title_input_message">Input message</string>
    <string name="hint_input_message">Leave a message…</string>
    <string name="label_accepted">Accepted</string>
    <string name="label_rejected">Rejected</string>

    <string name="label_action_user_action_accept">Accept</string>
    <string name="label_action_user_action_reject">Reject</string>
    <string name="label_action_user_action_none">None</string>
    <string name="label_action_user_action_unknown">Unknown</string>

    <string name="label_action_state_created">Created</string>
    <string name="label_action_state_done">Done</string>
    <string name="label_action_state_passed">Passed</string>
    <string name="label_action_state_cancelled">Cancelled</string>
    <string name="label_action_state_failed">Failed</string>
    <string name="label_action_state_unknown">Unknown</string>

    <string name="label_security_check">Security check</string>
    <string name="label_security_jail_broken">Jail broken not detected</string>
    <string name="label_security_hook">Hook not detected</string>
    <string name="label_security_emulator">Emulator not detected</string>
    <string name="label_security_virtual_app">Virtual environment not detected</string>
    <string name="label_security_mock_location">Mock location not enabled</string>
    <string name="label_security_ext_storage">Apps on external not detected</string>
    <string name="label_security_dev_settings">Developer options disabled</string>
    <string name="label_security_debugger">Debugger disabled</string>
    <string name="label_security_adb">ADB disabled</string>
    <string name="desc_security_device_insecure">Device is insecure, please use another device instead.</string>

    <string name="action_ignore">Ignore and continue</string>
    <string name="pick">Pick</string>
</resources>
