<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacer_m"
    android:clipToPadding="false"
    android:background="?android:colorBackground"
    android:clickable="true"
    android:focusable="true"
    tools:context=".pairing.NewPairingFragment">

    <ImageView
        android:id="@+id/figure"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/fig_qr_code_scan"
        app:tint="?attr/colorPrimary"/>

    <TextView
        android:id="@+id/desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/figure"
        android:layout_marginTop="@dimen/spacer_m"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/desc_pair_scan"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/scan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_scan" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/input_token"
        app:layout_constraintBottom_toTopOf="@+id/scan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_input_token"
        style="@style/Widget.MaterialComponents.Button.TextButton"/>

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress"
        app:layout_constraintEnd_toEndOf="@+id/scan"
        app:layout_constraintTop_toTopOf="@+id/scan"
        app:layout_constraintBottom_toBottomOf="@+id/scan"
        android:layout_marginEnd="@dimen/spacer_s"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="?android:progressBarStyleSmall"/>

</androidx.constraintlayout.widget.ConstraintLayout>